--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
   js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+  
+  <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <header>
 
 <h1>TechAlert</h1>
@@ -68,6 +77,8 @@
 <br>
 <a href="make_command.html">make | linux command</a>
 </section>
+  
+  <div class="fb-share-button" data-href="https://rahul10mail.github.io/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frahul10mail.github.io%2F&amp;src=sdkpreparse">Share</a></div>
 
 <div class="fb-comments" data-href="https://rahul10mail.github.io/" data-numposts="5"></div>
 
