--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 <header>
 
-<h1>TechAlert</h1>
+<h1>IntoTech</h1>
 <hr>
 
 <nav>
@@ -84,7 +84,7 @@
 
 <footer>
 <hr>
-<p><small>All content copyright &copy; 2017, TechAlert</small></p>
+<p><small></small></p>
 </footer>
 
 </body>
