--- a/software.html
+++ b/software.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Home intotech</title>
+<title>Linux intotech</title>
 <link rel="stylesheet" href="styles.css" type="text/css" />
 <script type="text/javascript" src="js/jquery-1.2.6.min.js"></script>
 <script type="text/javascript" src="js/jquery.flow.1.2.js"></script>
@@ -14,19 +14,6 @@
 	<div id="header">			
 		<!-- page header - use <span></span> to colour text grey, default color blue -->
 		<h1><a href="#">Into<span>Tech</span></a></h1>
-	
-		<!-- header search form -->
-		<!--div class="search-form">
-			<fieldset>
-				<form action="#" method="get">
-					<p>
-						<label for="search" accesskey="s" class="hidden">Search:</label>
-						<input type="text" name="q" id="search" />
-						<input type="submit" class="formbutton" value="Search" />
-					</p>
-				</form>
-			</fieldset>
-		</div-->
 		
 		<div class="clear"></div>
 	</div>
@@ -35,9 +22,9 @@
 		<div class="inner-navigation">
 			<ul>
 				<!-- top navigation use selected class for selected item -->
-				<li class="selected"><a href="index.html">home</a></li>
+				<li><a href="index.html">home</a></li>
 				<li><a href="linux.html">linux</a></li>
-				<li><a href="software.html">software</a></li>
+				<li class="selected"><a href="software.html">software</a></li>
 				<li><a href="contact.html">contact</a></li>
 			</ul>
 		</div>
@@ -48,18 +35,25 @@
 		<!-- left hand main content -->
 		<div id="page">
 			
-			<p>We provide information related to linux command lines and other useful software.We hope our articles will be useful to you.</p>
+			<h2>Software</h2>
+			<p>In this article we will tell you about various softwares that are very usefull.</p>
 			
 			<ul class="servicelist">
 				<li class="gimp-icon"><span>GIMP is the GNU Image Manipulation Program. It  is  used  to  edit  and
        manipulate  images. It can load and save <a href="gimp.html" ><u>read more...</u></a></span></li>
 				<li class="bluefish-icon"><span>bluefish  is  an  open-source  editor for experienced web designers and
        programmers, supporting many  programming <a href="blue.html" ><u>read more...</u></a></span></li>
-				<li class="make-icon"><span>The  make  utility will determine automatically which pieces of a large
-       program need to be recompiled, and  issue  the  commands  to  recompile
-       them.<a href="make.html" ><u>read more...</u></a></span></li>
-				<!--li class="app-icon last"><span>Nulla rutrum sapien sed leo. Fusce sit amet nulla ac velit commodo mattis. Ut tristique neque nec lorem. Vivamus leo nisl, dapibus vitae, consequat nec, tempus et, erat.</span></li-->
+				<li class="ink-icon"><span>Inkscape is a GUI editor for Scalable Vector Graphics (SVG) format
+       drawing files, with capabilities similar to Adobe Illustrator,
+       CorelDraw, Xara Xtreme, etc. <a href="inkscape.html" ><u>read more...</u></a></span></li>
 			</ul>
+			
+
+			
+			<!--h2>Morbi pellentesque</h2>
+			<p>Maecenas nibh. In faucibus laoreet sem. Morbi pellentesque, lorem nec posuere accumsan, orci lectus ultrices odio, imperdiet pharetra tortor ligula mattis nibh. Nunc fringilla porttitor ipsum. Nulla rutrum sapien sed leo. Fusce sit amet nulla ac velit commodo mattis. Ut tristique neque nec lorem. Vivamus leo nisl, dapibus vitae, consequat nec, tempus et, erat. Nulla auctor ullamcorper arcu. Integer lacinia, odio vel sagittis ultrices, odio odio venenatis libero, tempor eleifend augue arcu ut quam.</p>
+			
+			<p>Nulla rutrum sapien sed leo. Fusce sit amet nulla ac velit commodo mattis. Ut tristique neque nec lorem. Vivamus leo nisl, dapibus vitae, consequat nec, tempus et, erat.</p-->
 		
 
 		</div>
@@ -67,12 +61,20 @@
 		
 		<!-- start sidebar -->		
 		<div id="sidebar">
+		
+			<!-- sidebar h3: use <strong> for black text -->
+			<!--h3>Current <strong>clients</strong></h3>
+			<ul class="clientlist">
+				<li><a href="#"><img src="images/client-logo-example.png" alt="Client #1" /></a></li>
+				<li><a href="#"><img src="images/client-logo-example.png" alt="Client #1" /></a></li>
+				<li><a href="#"><img src="images/client-logo-example.png" alt="Client #1" /></a></li>
+			</ul-->
 			<br class="clear" />
 				
 			<h3>Related <strong>links</strong></h3>
 			<ul>
-			  <li><a href="inkscape.html">Inkscape</a></li>
 			  <li><a href="man.html">man</a></li>
+			  <li><a href="make.html">make</a></li>
 			</ul>
 				
 
