--- a/gimp.html
+++ b/gimp.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="js/custom.js"></script>
 </head>
 <body>
+<script type="text/javascript" src="js/fb.js"></script>
 <div id="wrap">
 	<div id="header">			
 		<!-- page header - use <span></span> to colour text grey, default color blue -->
@@ -87,6 +88,15 @@
 		<div class="clear"></div>
 				
 	</div>
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-comments" data-href="https://rahul10mail.github.io/gimp.html" data-numposts="5"></div>
 	<!-- start footer -->
 	<hr />
 	<div class="footer1">
