--- a/gimp.html
+++ b/gimp.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Linux intotech</title>
+<title>GIMP</title>
 <link rel="stylesheet" href="styles.css" type="text/css" />
 <script type="text/javascript" src="js/jquery-1.2.6.min.js"></script>
 <script type="text/javascript" src="js/jquery.flow.1.2.js"></script>
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="js/custom.js"></script>
 </head>
 <body>
-<script type="text/javascript" src="js/fb.js"></script>
+<script type="text/javascript" src="js/javascript SDK FB.js"></script>
 <div id="wrap">
 	<div id="header">			
 		<!-- page header - use <span></span> to colour text grey, default color blue -->
@@ -89,13 +89,7 @@
 				
 	</div>
 	<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+<script type="text/javascript" src="js/fb.js"></script>
 <div class="fb-comments" data-href="https://rahul10mail.github.io/gimp.html" data-numposts="5"></div>
 	<!-- start footer -->
 	<hr />
