--- a/gimp.html
+++ b/gimp.html
@@ -89,7 +89,13 @@
 				
 	</div>
 	<div id="fb-root"></div>
-<script type="text/javascript" src="js/fb.js"></script>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="fb-comments" data-href="https://rahul10mail.github.io/gimp.html" data-numposts="5"></div>
 	<!-- start footer -->
 	<hr />
