--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,24 @@
 <script type="text/javascript" src="js/custom.js"></script>
 </head>
 <body>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : 'your-app-id',
+      xfbml      : true,
+      version    : 'v2.8'
+    });
+    FB.AppEvents.logPageView();
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
 <div id="wrap">
 	<div id="header">			
 		<!-- page header - use <span></span> to colour text grey, default color blue -->
@@ -44,28 +62,14 @@
 		<div id="page">
 			
 			<h2>Leave us a Comment</h2>
-			<!--fieldset>
-				<legend>Fusce ac velit</legend>
-				<form action="#" method="get">
-					<p>
-						<label for="name">Name: <span class="required">*</span></label>
-						<input type="text" id="name" />
-					</p>
-					
-					<p>
-						<label for="email">Email: <span class="required">*</span></label>
-						<input type="text" id="email" />
-					</p>
-					
-					<p>
-						<label for="message">Message: <span class="required">*</span></label>
-						<textarea cols="30" rows="8" id="message"></textarea>
-					</p>
-					<p>
-						<input type="submit" name="submitform" value="Send message" class="formbutton" />
-					</p>
-				</form>
-			</fieldset-->
+			<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-comments" data-href="https://rahul10mail.github.io/gimp.html" data-numposts="5"></div>
 			
 		
 
