--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
   js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-comments" data-href="https://rahul10mail.github.io/gimp.html" data-numposts="5"></div>
+<div class="fb-comments" data-href="https://rahul10mail.github.io/contact.html" data-numposts="5"></div>
 			
 		
 
