--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 <div id="wrap">
 	<div id="header">			
 		<!-- page header - use <span></span> to colour text grey, default color blue -->
-		<h1><a href="#">ripped<span>blue</span></a></h1>
+		<h1><a href="#">into<span>tech</span></a></h1>
 	
 		<!-- header search form -->
 		
