added authors and news section

--- a/linux.html
+++ b/linux.html
@@ -25,6 +25,8 @@
 				<li><a href="index.html">home</a></li>
 				<li class="selected"><a href="linux.html">linux</a></li>
 				<li><a href="software.html">software</a></li>
+				<li><a href="news.html" >news</a></li>
+				<li><a href="authors.html" >authors</a></li>
 				<li><a href="contact.html">contact</a></li>
 			</ul>
 		</div>
