--- a/man.html
+++ b/man.html
@@ -43,6 +43,8 @@
 				<li><a href="index.html">home</a></li>
 				<li class="selected"><a href="linux.html">linux</a></li>
 				<li><a href="software.html">software</a></li>
+				<li><a href="news.html" >news</a></li>
+				<li><a href="authors.html" >authors</a></li>
 				<li><a href="contact.html">contact</a></li>
 			</ul>
 		</div>
@@ -94,11 +96,8 @@
 				
 			<h3>Related <strong>links</strong></h3>
 			<ul>
-			  <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-			  <li><a href="#">Quisque consequat nunc a felis.</a></li>
-			  <li><a href="#">Suspendisse consequat magna at.</a></li>
-			  <li><a href="#">Etiam eget diam id ligula rhoncus.</a></li>
-			  <li><a href="#">Sed in mauris non nibh.</a></li>
+			  <li><a href="make.html">make</a></li>
+			  <li><a href="inkscape.html">Inkscape</a></li>
 			</ul>
 				
 
