--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 				<li class="selected"><a href="index.html">home</a></li>
 				<li><a href="linux.html">linux</a></li>
 				<li><a href="software.html">software</a></li>
+				<li><a href="news.html" >news</a></li>
+				<li><a href="authors.html" >authors</a></li>
 				<li><a href="contact.html">contact</a></li>
 			</ul>
 		</div>
